<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/labelNombre"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:text="@string/labelNombre" />

        <EditText
            android:id="@+id/txtNombre"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/txtNombre"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/labelApellidos"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:text="@string/labelApellidos" />

        <EditText
            android:id="@+id/txtApellidos"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/txtApellidos"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/labelEmail"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:text="@string/labelEmail" />

        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/txtEmail"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/labelTelefono"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:text="@string/labelTelefono" />

        <EditText
            android:id="@+id/txtTelefono"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/txtTelefono"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/imgBAbajo"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="50dp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorIbAbajo"
            app:srcCompat="@android:drawable/stat_sys_download" />

        <ImageButton
            android:id="@+id/imgBArriba"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="50dp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorIbArriba"
            app:srcCompat="@android:drawable/stat_sys_upload" />
    </LinearLayout>

    <Switch
        android:id="@+id/swtLog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/swtLog"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

</LinearLayout>